@@ -1,4 +1,6 @@
 Changes towards version 0.2:
+- Changed PC cmd-line options:  now -a font,menu,scan -PhracturedBlue
+- Added gradiated font support (for ship name), and PC-font option -PBlue
 - Minor fixes to PCMenu by fOSSiL, Nic, PhracturedBlue
 - Updated mingw support with better directions, and easier build -PBlue
 - PCMenus now suports 'settings', and menu font is correct -PhracturedBlue
